--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,12 @@
         <li>
           <a href="/user_sign_up">Sign Up</a>
         </li>
+        <li>
+          <a href="/user_sign_in">Sign In</a>
+        </li>
+        <li>
+          <a href="/user_sign_out">Sign Out</a>
+        </li>
          <li>
           <a href="/users">Users</a>
         </li>
